--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,1 @@
-
+.monitor{min-width:600px}.monitor th:nth-child(1),.monitor td:nth-child(1){width:5%}.monitor th:nth-child(2),.monitor td:nth-child(2){width:13%}.monitor th:nth-child(3),.monitor td:nth-child(3){width:16%}.monitor th:nth-child(4),.monitor td:nth-child(4){width:22%}.monitor th:nth-child(5),.monitor td:nth-child(5){width:22%}.monitor th:nth-child(6),.monitor td:nth-child(6){width:22%}.accordion-body{overflow:auto}.head-table{padding:0 1.25rem;overflow:auto}
